--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ let style3 = document.getElementById("changestyle3").addEventListener("pointerdo
 
 <hr>
 </div>
-<img src="HTML.PNG" alt="HTML">
+<img src="HTML.png" alt="HTML">
 <h2>Lesson 1 - HTML</h2>
 <p>
 <h3>Objectives:</h3>
@@ -70,7 +70,7 @@ let style3 = document.getElementById("changestyle3").addEventListener("pointerdo
 </p>
 <br>
 <hr>
-<p><img src="CSS.PNG" alt="CSS">
+<p><img src="CSS.png" alt="CSS">
 <h2>Lesson 2 - CSS</h2>
 <h3>Objectives:</h3>
 <ul>
@@ -87,7 +87,7 @@ let style3 = document.getElementById("changestyle3").addEventListener("pointerdo
 </p>
 <br>
 <hr>
-<img src="JS.PNG" alt="JS">
+<img src="JS.png" alt="JS">
 <h2>Lesson 3 - Javascript</h2>
 <p>
 <h3>Objectives:</h3>
