--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <a href = "https://www.w3schools.com/" id = "link" target="_blank">A great resource while you learn is W3Schools</a>
 <p id = "linkCounter">Number of clicks on this page ==> 0</p>
 <a href = "https://tictactoejs.pages.dev" id = "tictactoe" target="_blank">Play tic tac toe!</a>
-<a href = "https://threejs3drendering.pages.dev/" id = "3dgame" target="_blank">Play 3d game!</a>
+<a href = "https://threejs3drendering.pages.dev/" id = "game" target="_blank">Play 3d game!</a>
 
 <script>
 let email_input = setTimeout(function() {prompt("Would you like to subscribe to receive emails? \nIf so, enter your email address here: ",""); } , 5000);
