--- a/index.html
+++ b/index.html
@@ -128,5 +128,8 @@ let style3 = document.getElementById("changestyle3").addEventListener("pointerdo
 </form>
 <br>
 </div>
+    
+<script src="javascript.js"></script>
+    
 </body>
 </html>
