--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+
+
 <div id = "title">
 <h1><u>1.3.4 Web Technologies</u></h1>
 <h2 id="pageLayout">Page Layouts:</h2>
@@ -25,7 +27,7 @@
 
 <hr>
 </div>
-<img src="HTML.png" alt="HTML">
+<img src="HTML.PNG" alt="HTML">
 <h2>Lesson 1 - HTML</h2>
 <p>
 <h3>Objectives:</h3>
@@ -43,7 +45,7 @@
 </p>
 <br>
 <hr>
-<p><img src="CSS.png" alt="CSS">
+<p><img src="CSS.PNG" alt="CSS">
 <h2>Lesson 2 - CSS</h2>
 <h3>Objectives:</h3>
 <ul>
@@ -60,7 +62,7 @@
 </p>
 <br>
 <hr>
-<img src="JS.png" alt="JS">
+<img src="JS.PNG" alt="JS">
 <h2>Lesson 3 - Javascript</h2>
 <p>
 <h3>Objectives:</h3>
@@ -79,23 +81,23 @@
 <br>
 <div id="footer">
 <hr>
-<form>
+<form onsubmit="showAlert(event)">
     <h1>Contact Mr Carr</h1>
     <label>Name:</label>
-    <input type="text" id="name"><br><br>
+    <input type="text" id="name" required><br><br>
 
     <label>Email:</label>
-    <input type="email"><br><br>
+    <input type="email" id="email" required><br><br>
 
     <label>Message:</label><br>
-    <textarea rows="4" cols="35"></textarea><br><br>
+    <textarea rows="4" cols="35" id="message" required></textarea><br><br>
 
-    <button type="submit"><b>Send</b></button>
+    <button type="submit" id="send"><b>Send</b></button>
 </form>
 <br>
 </div>
-    
+
 <script src="javascript.js"></script>
-    
+
 </body>
 </html>
