--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <hr>
 </div>
-<img src="HTML.PNG" alt="HTML">
+<img src="HTML.png" alt="HTML">
 <h2>Lesson 1 - HTML</h2>
 <p>
 <h3>Objectives:</h3>
@@ -45,7 +45,7 @@
 </p>
 <br>
 <hr>
-<p><img src="CSS.PNG" alt="CSS">
+<p><img src="CSS.png" alt="CSS">
 <h2>Lesson 2 - CSS</h2>
 <h3>Objectives:</h3>
 <ul>
@@ -62,7 +62,7 @@
 </p>
 <br>
 <hr>
-<img src="JS.PNG" alt="JS">
+<img src="JS.png" alt="JS">
 <h2>Lesson 3 - Javascript</h2>
 <p>
 <h3>Objectives:</h3>
