--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
 <a href = "https://www.w3schools.com/" id = "link" target="_blank">A great resource while you learn is W3Schools</a>
 <p id = "linkCounter">Number of clicks on this page ==> 0</p>
-<a href = "https://tictactoejs.pages.dev" id = "tictactoe" target="_blank">Play tic tac toe!</a>
-<a href = "https://threejs3drendering.pages.dev/" id = "game" target="_blank">Play 3d game!</a>
+<a href = "https://tictactoejs.pages.dev" target="_blank"><img src="tictactoejs.pages.dev.png" alt="tic tac toe" id="tictactoe"></a>
+<a href = "https://threejs3drendering.pages.dev/" target="_blank"><img src="threejs3drendering.pages.dev.png" alt="3d game" id = "game"></a>
+
 
 <hr>
 </div>
