--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <br>
 </p>
 
-<a href = "https://www.w3schools.com/" id = "link" target="_blank">A great resource while you learn is W3Schools</a>
+<a href = "https://www.w3schools.com/" id = "link" class="link" target="_blank">A great resource while you learn is W3Schools</a>
 <p id = "linkCounter">Number of clicks on this page ==> 0</p>
-<a href = "https://tictactoejs.pages.dev" target="_blank"><img src="tictactoejs.pages.dev.png" alt="tic tac toe" id="tictactoe"></a>
-<a href = "https://threejs3drendering.pages.dev/" target="_blank"><img src="threejs3drendering.pages.dev.png" alt="3d game" id = "game"></a>
+<a href = "https://tictactoejs.pages.dev" target="_blank"><img src="tictactoejs.pages.dev.png" alt="tic tac toe" id="tictactoe" class="link"></a>
+<a href = "https://threejs3drendering.pages.dev/" target="_blank"><img src="threejs3drendering.pages.dev.png" alt="3d game" id = "game" class = "link"></a>
 
 
 <hr>
@@ -43,8 +43,10 @@
     <li>HTML tag definitions</li>
     <li>Example HTML code</li>
 </ol>
-</p>
 <br>
+<a href = "https://agsfb.sharepoint.com/sites/TEAMAALEVELCS24-26/_layouts/15/Doc.aspx?sourcedoc=%7Bb6646148-6c25-4bc4-8c0a-51e9c5e5b51e%7D&action=view&wd=target%28_Content+Library%2FPaper+1%2F1.3.4+Web+Technologies.one%7C54d84b10-e85e-4c3c-a132-ea5a0f47a2e1%2F1.3.4.a+HTML%7C429a837c-baa2-42a7-9912-56f0d519ba64%2F%29&wdorigin=703" class="onenotelinks" target="_blank">Link to the OneNote page.</a>
+
+</p>
 <hr>
 <p><img src="CSS.png" alt="CSS">
 <h2>Lesson 2 - CSS</h2>
@@ -60,8 +62,10 @@
     <li>CSS property definitions</li>
     <li>Example CSS code</li>
 </ol>
-</p>
 <br>
+<a href = "https://agsfb.sharepoint.com/sites/TEAMAALEVELCS24-26/_layouts/15/Doc.aspx?sourcedoc=%7Bb6646148-6c25-4bc4-8c0a-51e9c5e5b51e%7D&action=view&wd=target%28_Content+Library%2FPaper+1%2F1.3.4+Web+Technologies.one%7C54d84b10-e85e-4c3c-a132-ea5a0f47a2e1%2F1.3.4.b+CSS%7C62deaabb-6368-43a5-a44c-25ca6a039a1f%2F%29&wdorigin=703" class="onenotelinks" target="_blank">Link to the OneNote page.</a>
+
+</p>
 <hr>
 <img src="JS.png" alt="JS">
 <h2>Lesson 3 - Javascript</h2>
@@ -78,11 +82,13 @@
     <li>Javascript definitions</li>
     <li>Example Javascript code</li>
 </ol>
-</p>
 <br>
+<a href = "https://agsfb.sharepoint.com/sites/TEAMAALEVELCS24-26/_layouts/15/Doc.aspx?sourcedoc=%7Bb6646148-6c25-4bc4-8c0a-51e9c5e5b51e%7D&action=view&wd=target%28_Content+Library%2FPaper+1%2F1.3.4+Web+Technologies.one%7C54d84b10-e85e-4c3c-a132-ea5a0f47a2e1%2F1.3.4.c+JavaScript%7C7ab8bb55-1c83-4657-909f-36a9e1d94aa2%2F%29&wdorigin=703" class="onenotelinks" target="_blank">Link to the OneNote page.</a>
+
+</p>
 <div id="footer">
 <hr>
-<form onsubmit="showAlert(event)">
+<form id="form">
     <h1>Contact Mr Carr</h1>
     <label>Name:</label>
     <input type="text" id="name" required><br><br>
@@ -93,11 +99,12 @@
     <label>Message:</label><br>
     <textarea rows="4" cols="35" id="message" required></textarea><br><br>
 
-    <button type="submit" id="send"><b>Send</b></button>
+    <button type="submit"><b>Send</b></button>
 </form>
 <br>
 </div>
 
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script src="javascript.js"></script>
 
 </body>
