--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <label>Name:</label>
     <input type="text" id="name" required><br><br>
 
-    <label>Email:</label>
-    <input type="email" id="email" required><br><br>
+    <label>Subject:</label>
+    <input type="text" id="subject" required><br><br>
 
     <label>Message:</label><br>
     <textarea rows="4" cols="35" id="message" required></textarea><br><br>
@@ -104,7 +104,17 @@
 <br>
 </div>
 
-<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script
+  type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+  (function () {
+    emailjs.init({
+      publicKey: 'NhNnJxHaGwpH77-LU',
+    });
+  })();
+</script>
 <script src="javascript.js"></script>
 
 </body>
